Comments. Edited Swagger documentation
