# src/features/comments/routers/comments.router.ts
@@ -1,6 +1,7 @@
 import {Router} from "express";
 import {putCommentsHandler} from "./handlers/put-comments.handler";
 import {getCommentHandler} from "./handlers/get-comment.handler";
+import {getCommentsHandler} from "./handlers/get-comments.handler";
 import {idValidation} from "../../../core/middlewares/validation/params-id.validation-middleware";
 import {accessTokenGuard} from "../../auth/routers/guards/access.token.guard";
 import {contentInputDtoValidation} from "../comment.input-dto.validation-middlewares";
@@ -13,6 +14,8 @@ import {accessTokenLikes} from "../../auth/routers/guards/access.token.likes";
 
 export const commentsRouter = Router();
 
+commentsRouter.get("/",
+    getCommentsHandler);
 
 commentsRouter.put("/:id",
     accessTokenGuard,
